@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2004, 2017, Oracle and/or its affiliates. All rights reserved.
+# Copyright (c) 2004, 2019, Oracle and/or its affiliates. All rights reserved.
 # DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
 #
 # This code is free software; you can redistribute it and/or modify it
@@ -54,15 +54,23 @@ go() {
 # Run test with each GC configuration
 #
 # Notes: To ensure that metaspace fills up we disable class unloading.
-# Also we set the max metaspace to 16MB - otherwise the test takes too
-# long to run.
+# Also we set the max metaspace to 16MB/32MB - otherwise the test takes too
+# long to run. The 32MB setting is required for running with CDS archive.
 
-go -noclassgc -XX:MaxMetaspaceSize=16m -XX:+UseSerialGC LowMemoryTest2
-go -noclassgc -XX:MaxMetaspaceSize=16m -XX:+UseParallelGC LowMemoryTest2
-go -noclassgc -XX:MaxMetaspaceSize=16m -XX:+UseConcMarkSweepGC LowMemoryTest2
+go -noclassgc -XX:MaxMetaspaceSize=32m -XX:+UseSerialGC LowMemoryTest2
+go -noclassgc -XX:MaxMetaspaceSize=32m -XX:+UseParallelGC LowMemoryTest2
 
 # Test class metaspace - might hit MaxMetaspaceSize instead if
 # UseCompressedClassPointers is off or if 32 bit.
+#
+# (note: This is very shaky and that shakiness exposes a problem with MemoryMXBean:
+#
+#  MemoryMXBean defines "used" "committed" and "max" (see java/lang/management/MemoryUsage.java)
+#  This abstraction misses a definition for "address space exhausted" which with the new Metaspace (jep387)
+#  can happen before committed/used hits any trigger. We now commit only on demand and therefore class loaders
+#  can sit atop of uncommitted address space, denying new loaders address space. In the old Metaspace,
+#  we would have committed the space right away and therefore the MemoryMXBean "committed" trigger
+#  would have fired. In the new Metaspace, we don't commit, so the MemoryMXBean does not fire.
 go -noclassgc -XX:MaxMetaspaceSize=16m -XX:CompressedClassSpaceSize=4m LowMemoryTest2
 
 echo ''
